--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.3.1",
+    "@google/genai": "^1.26.0",
+    "@google/generative-ai": "^0.24.1",
+    "groq-sdk": "^0.34.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
